--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,25 @@ resilience4j.circuitbreaker.instances.externalService.sliding-window-type=COUNT_
 resilience4j.circuitbreaker.instances.externalService.sliding-window-size=5
 resilience4j.circuitbreaker.instances.externalService.failure-rate-threshold=50
 resilience4j.circuitbreaker.instances.externalService.wait-duration-in-open-state=5000
+
+# Logging configuration
+logging.level.root=INFO
+logging.level.com.example.demo=DEBUG
+logging.level.org.springframework=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+logging.file.name=logs/admin-service.log
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
+
+# Debug configuration
+logging.level.com.example.demo.service=DEBUG
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Debug port settings (using 5006 to avoid conflicts)
+server.port=8080
+spring.devtools.remote.debug.local-port=5006
+spring.devtools.remote.debug.enabled=true
+spring.devtools.remote.secret=mysecret
+spring.devtools.livereload.enabled=true
+# Increase timeout for debugging
+spring.mvc.async.request-timeout=3600000
